--- a/static/login.html
+++ b/static/login.html
@@ -1,7 +1,11 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
-<style>
+<html>
+    <head>
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+        <meta charset="utf-8">
+        <style>
 /* Demo Background */
 body{background:url(/images/bg/bg-6.png)}
 
@@ -130,33 +134,37 @@ body{background:url(/images/bg/bg-6.png)}
  padding: 10px 20px;
  }
 }
-</style>
-
+        </style>
+    </head>
+<body>
 <div class="container">
- <div class="row">
+    <div class="row">
 
- <div class="col-md-offset-3 col-md-6">
- <form method="post" class="form-horizontal">
- <span class="heading">АВТОРИЗАЦИЯ</span>
- <div class="form-group">
- <input name = "login" class="form-control" id="inputLogin" placeholder="Введите логин">
- <i class="fa fa-user"></i>
- </div>
- <div class="form-group help">
- <input name = "pass" type="password" class="form-control" id="inputPassword" placeholder="Введите пароль">
- <i class="fa fa-lock"></i>
- <a href="#" class="fa fa-question-circle"></a>
- </div>
- <div class="form-group">
- <div class="main-checkbox">
- <input type="checkbox" value="none" id="checkbox1" name="check"/>
- <label for="checkbox1"></label>
- </div>
- <span class="text">Запомнить</span>
- <button type="submit" class="btn btn-default">ВХОД</button>
- </div>
- </form>
- </div>
+        <div class="col-md-offset-3 col-md-6">
+            <form method="post" class="form-horizontal">
+                <span class="heading">АВТОРИЗАЦИЯ</span>
+                <div class="form-group">
+                    <input name="login" class="form-control" id="inputLogin" placeholder="Введите логин">
+                    <i class="fa fa-user"></i>
+                </div>
+                <div class="form-group help">
+                    <input name="pass" type="password" class="form-control" id="inputPassword"
+                           placeholder="Введите пароль">
+                    <i class="fa fa-lock"></i>
+                    <a href="#" class="fa fa-question-circle"></a>
+                </div>
+                <div class="form-group">
+                    <div class="main-checkbox">
+                        <input type="checkbox" value="none" id="checkbox1" name="check"/>
+                        <label for="checkbox1"></label>
+                    </div>
+                    <span class="text">Запомнить</span>
+                    <button type="submit" class="btn btn-default">ВХОД</button>
+                </div>
+            </form>
+        </div>
 
- </div><!-- /.row -->
+    </div><!-- /.row -->
 </div><!-- /.container -->
+</body>
+</html>
