разные фиксы, оптимизация шаблонов

--- a/static/add_lot_item.html
+++ b/static/add_lot_item.html
@@ -1,4 +1,4 @@
-<div id = "{item_id}" class="col mb-4 " onmouseenter="mouse_enter(event)" onmouseleave="mouse_leave(event)" onclick="click_item({item_name},{item_id},{item_count},{user_name},{server_name})">
+<div id = "{id}" class="col mb-4 " onmouseenter="mouse_enter(event)" onmouseleave="mouse_leave(event)" onclick="click_item('{id}','{item_name}','{item_id}','{item_count}','{user_name}','{server_name}')">
     <div class="card px-3">
 	  <div class="row no-gutters">
 		<div class="col-md-4 my-auto">
