добавление лотов, сообщения об успехе и об ошибках

--- a/static/main.html
+++ b/static/main.html
@@ -32,11 +32,11 @@
         crossorigin="anonymous"></script>
 <script src="/script.js"></script>
 
-
 {navigation}
 
 {content}
 
+{message}
 
 </body>
 </html>
