--- a/static/add_lot.html
+++ b/static/add_lot.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class=" col-sm-3 ml-5 my-4">
 
-        <form>
+        <form method="post">
 
             <div class="col mb-4 bg-primary ">
                 <div class="card px-3 ">
@@ -24,23 +24,23 @@
             </div>
 
 
-            <input type="hidden" class="form-control" id="id">
+            <input type="hidden" class="form-control" id="id" name="id">
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Количество:</label>
                 <div class="col-sm-8">
-                    <input class="form-control" id="count">
+                    <input class="form-control" id="count" name="amount">
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-5 col-form-label">Минимальная цена:</label>
                 <div class="col-sm-7">
-                    <input class="form-control" id="min_cost">
+                    <input class="form-control" id="min_cost" name="price_start">
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-5 col-form-label">Максимальная цена:</label>
                 <div class="col-sm-7">
-                    <input class="form-control" id="max_cost">
+                    <input class="form-control" id="max_cost" name="price_end">
                 </div>
             </div>
 
