--- a/static/all_lots_lot_item.html
+++ b/static/all_lots_lot_item.html
@@ -13,11 +13,11 @@
                         <p class="col mb-4 card-text"><b>Сервер:</b> {server_name} </p>
                         <p class="col mb-4 card-text"><b>Стартовая цена:</b> {cost_start} </p>
                         <p class="col mb-4 card-text"><b>Текущая цена:</b> {cost_current} </p>
-                        <p class="col mb-4 card-text"><b>Цена выкупа:</b> {cost_now} </p>
+                        <p class="col mb-4 card-text"><b>Цена выкупа:</b> {cost_end} </p>
                     </div>
                     {lot_change}
                     <p class="card-text mx-auto">
-                        <small class="text-muted">До окончания торгов осталось: {time_end}</small>
+                        <small class="text-muted">До окончания торгов осталось: {time_end} секунд</small>
                     </p>
                 </div>
             </div>
