--- a/static/login.html
+++ b/static/login.html
@@ -1,180 +1,51 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <meta charset="utf-8">
-    <style>
-/* Demo Background */
-body{background:url(/images/bg/bg-6.png)}
-
-/* Form Style */
-.form-horizontal{
- background: #fff;
- padding-bottom: 40px;
- border-radius: 15px;
- text-align: center;
-}
-.form-horizontal .heading{
- display: block;
- font-size: 35px;
- font-weight: 700;
- padding: 35px 0;
- border-bottom: 1px solid #f0f0f0;
- margin-bottom: 30px;
-}
-.form-horizontal .form-group{
- padding: 0 40px;
- margin: 0 0 25px 0;
- position: relative;
-}
-.form-horizontal .form-control{
- background: #f0f0f0;
- border: none;
- border-radius: 20px;
- box-shadow: none;
- padding: 0 20px 0 45px;
- height: 40px;
- transition: all 0.3s ease 0s;
-}
-.form-horizontal .form-control:focus{
- background: #e0e0e0;
- box-shadow: none;
- outline: 0 none;
-}
-.form-horizontal .form-group i{
- position: absolute;
- top: 12px;
- left: 60px;
- font-size: 17px;
- color: #c8c8c8;
- transition : all 0.5s ease 0s;
-}
-.form-horizontal .form-control:focus + i{
- color: #00b4ef;
-}
-.form-horizontal .fa-question-circle{
- display: inline-block;
- position: absolute;
- top: 12px;
- right: 60px;
- font-size: 20px;
- color: #808080;
- transition: all 0.5s ease 0s;
-}
-.form-horizontal .fa-question-circle:hover{
- color: #000;
-}
-.form-horizontal .main-checkbox{
- float: left;
- width: 20px;
- height: 20px;
- background: #11a3fc;
- border-radius: 50%;
- position: relative;
- margin: 5px 0 0 5px;
- border: 1px solid #11a3fc;
-}
-.form-horizontal .main-checkbox label{
- width: 20px;
- height: 20px;
- position: absolute;
- top: 0;
- left: 0;
- cursor: pointer;
-}
-.form-horizontal .main-checkbox label:after{
- content: "";
- width: 10px;
- height: 5px;
- position: absolute;
- top: 5px;
- left: 4px;
- border: 3px solid #fff;
- border-top: none;
- border-right: none;
- background: transparent;
- opacity: 0;
- -webkit-transform: rotate(-45deg);
- transform: rotate(-45deg);
-}
-.form-horizontal .main-checkbox input[type=checkbox]{
- visibility: hidden;
-}
-.form-horizontal .main-checkbox input[type=checkbox]:checked + label:after{
- opacity: 1;
-}
-.form-horizontal .text{
- float: left;
- margin-left: 7px;
- line-height: 20px;
- padding-top: 5px;
- text-transform: capitalize;
-}
-.form-horizontal .btn{
- float: right;
- font-size: 14px;
- color: #fff;
- background: #00b4ef;
- border-radius: 30px;
- padding: 10px 25px;
- border: none;
- text-transform: capitalize;
- transition: all 0.5s ease 0s;
-}
-@media only screen and (max-width: 479px){
- .form-horizontal .form-group{
- padding: 0 25px;
- }
- .form-horizontal .form-group i{
- left: 45px;
- }
- .form-horizontal .btn{
- padding: 10px 20px;
- }
-}
-</style>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  
+	<style>
+	.container{
+		max-width: 500px;
+	}
+	</style>
+  
+  
 </head>
 <body>
-<div class="container">
-    <div class="row">
 
-        <div class="col-md-offset-3 col-md-6">
-            <form method="post" class="form-horizontal">
-                <span class="heading">АВТОРИЗАЦИЯ</span>
-                <div class="form-group">
-                    <input name="login" class="form-control" id="inputLogin" placeholder="Введите логин">
-                    <i class="fa fa-user"></i>
-                </div>
-                <div class="form-group help">
-                    <input name="pass" type="password" class="form-control" id="inputPassword"
-                           placeholder="Введите пароль">
-                    <i class="fa fa-lock"></i>
-                    <a href="#" class="fa fa-question-circle"></a>
-                </div>
-                <div class="form-group">
-                    <div class="main-checkbox">
-                        <input type="checkbox" value="none" id="checkbox1" name="check"/>
-                        <label for="checkbox1"></label>
-                    </div>
-                    <span class="text">Запомнить</span>
-                    <button id="button" type="submit" class="btn btn-default">ВХОД</button>
-                </div>
-            </form>
-        </div>
 
-    </div><!-- /.row -->
-</div><!-- /.container -->
+
+<div class="container mt-5">
+  <h2 style="text-align: center;">Авторизация</h2>
+  <form action="/action_page.php">
+    <div class="form-group">
+      <label for="email">Логин:</label>
+      <input class="form-control" id="login" placeholder="Введите логин" name="login">
+    </div>
+    <div class="form-group">
+      <label for="pwd">Пароль:</label>
+      <input type="password" class="form-control" id="pass" placeholder="Введите пароль" name="pass">
+    </div>
+    <div class="form-group form-check">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox" name="remember"> Запомнить меня
+      </label>
+    </div>
+	<div style="text-align: center;">
+		<button type="submit" class="w-75 btn btn-primary">Войти</button>
+	</div>
+    
+  </form>
+</div>
+
 {message}
+
+
 </body>
 </html>
