--- a/static/login.html
+++ b/static/login.html
@@ -23,7 +23,7 @@
 
 <div class="container mt-5">
   <h2 style="text-align: center;">Авторизация</h2>
-  <form action="/action_page.php">
+  <form method="post">
     <div class="form-group">
       <label for="email">Логин:</label>
       <input class="form-control" id="login" placeholder="Введите логин" name="login">
