изменил шаблоны лота - добавил форму

--- a/static/lot_buyer.html
+++ b/static/lot_buyer.html
@@ -2,7 +2,10 @@
     <h4 class="col-sm-12">Последняя ставка принадлежит вам! вы не можете повысить!</h4>
 </div>
 
-<button type="button" class="row px-5 w-100 btn btn-primary">Купить прямо сейчас за {cost_now}</button>
+<form method = "post">
+	<input name="buy_now_id" value="{buy_now_id}">
+	<button type="submit" class="row px-5 w-100 btn btn-primary">Купить прямо сейчас за {cost_now}</button>
+</form>
 
 <div class="my-4 row mx-auto">
 
