--- a/static/guest_user.html
+++ b/static/guest_user.html
@@ -1,6 +1,3 @@
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <a class="dropdown-item" href="#">Ваш баланс: {money}</a>
-    <a class="dropdown-item" href="#">Выставлено товаров: {countLots}</a>
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="/login">Войти</a>
+    <a class="dropdown-item" href="/login">Авторизоваться</a>
 </div>
