--- a/static/login.html
+++ b/static/login.html
@@ -1,51 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  
-	<style>
+<style>
 	.container{
 		max-width: 500px;
 	}
-	</style>
-  
-  
-</head>
-<body>
-
-
-
+</style>
 <div class="container mt-5">
-  <h2 style="text-align: center;">Авторизация</h2>
-  <form method="post">
-    <div class="form-group">
-      <label for="email">Логин:</label>
-      <input class="form-control" id="login" placeholder="Введите логин" name="login">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Пароль:</label>
-      <input type="password" class="form-control" id="pass" placeholder="Введите пароль" name="pass">
-    </div>
-    <div class="form-group form-check">
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" name="remember"> Запомнить меня
-      </label>
-    </div>
-	<div style="text-align: center;">
-		<button type="submit" class="w-75 btn btn-primary">Войти</button>
-	</div>
-    
-  </form>
+    <h2 style="text-align: center;">Авторизация</h2>
+    <form method="post">
+        <div class="form-group">
+            <label for="login">Логин:</label>
+            <input class="form-control" id="login" placeholder="Введите логин" name="login">
+        </div>
+        <div class="form-group">
+            <label for="pass">Пароль:</label>
+            <input type="password" class="form-control" id="pass" placeholder="Введите пароль" name="pass">
+        </div>
+        <div class="form-group form-check">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" name="remember"> Запомнить меня
+            </label>
+        </div>
+        <div style="text-align: center;">
+            <button type="submit" class="w-75 btn btn-primary">Войти</button>
+        </div>
+
+    </form>
 </div>
-
-{message}
-
-
-</body>
-</html>
