Мелкие фиксы шаблонов, разные фиксы функционала, покупка и изменение лота

--- a/static/lot_buyer.html
+++ b/static/lot_buyer.html
@@ -1,9 +1,9 @@
 <div class="form-group row mr-3">
-    <h4 class="col-sm-12">Последняя ставка принадлежит вам! вы не можете повысить!</h4>
+    <h4 class="col-sm-12">Последняя ставка принадлежит вам!</h4>
 </div>
 
 <form method = "post">
-	<input name="buy_now_id" value="{buy_now_id}">
+	<input type=hidden name="buy_now_id" value="{buy_now_id}">
 	<button type="submit" class="row px-5 w-100 btn btn-primary">Купить прямо сейчас за {cost_now}</button>
 </form>
 
