--- a/static/lot_usual.html
+++ b/static/lot_usual.html
@@ -1,7 +1,7 @@
-<form>
+<form method = "post">
 	<div class="form-group row mr-3">
-		<input type="hidden" name="buy_now_id" value="{buy_now_id}">
-		<label for="inputEmail3" class="col-sm-4 col-form-label">Введите цену: </label>
+		<input type="hidden" name="change_now_id" value="{buy_now_id}">
+		<label for="input_cost" class="col-sm-4 col-form-label">Введите цену: </label>
 		<div class="col-sm-4">
 			<input class="form-control" id="input_cost" placeholder="Ваша ставка" name="cost_current">
 		</div>
