--- a/static/main.html
+++ b/static/main.html
@@ -14,7 +14,7 @@
     <link href="max.css" rel="stylesheet">
 
 
-    <title>Hello, world!</title>
+    <title>Топовый аукцион</title>
 </head>
 <body>
 
