--- a/static/nav_bar.html
+++ b/static/nav_bar.html
@@ -7,13 +7,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <li class="nav-item {index_active}">
                 <a class="nav-link" href="/">Главная</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item {all_lots_active}">
                 <a class="nav-link" href="/all_lots">Доступные лоты</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {add_lot_active}">
                 <a class="nav-link" href="/add_lot">Выставить лот</a>
             </li>
         </ul>
