--- a/static/add_lot.html
+++ b/static/add_lot.html
@@ -1,3 +1,40 @@
+<style>
+	p{
+        width: 100%;
+        border-radius: 20px;
+		background-color: lightblue;
+	}
+    .form-group, .row{
+        font-family: Arial;
+        border-radius: 20px;
+    }
+    #button{
+        border-radius: 20px;
+    }
+    #button:hover{
+        width:10px;
+        box-shadow: 20px 20px 10px #033;
+    }
+    .form-group, .row{
+        font-family: Arial;
+        border-radius: 20px;
+    }
+    #min{
+        font-family: Arial;
+        background-color: lightblue;
+        border-radius: 20px;
+    }
+    #many{
+        font-family: Arial;
+        background-color: lightblue;
+        border-radius: 20px;
+    }
+    #max{
+        font-family: Arial;
+        background-color: lightblue;
+        border-radius: 20px;
+    }
+</style>
 <div class="row">
     <div class=" col-sm-3 ml-5 my-4">
 
@@ -26,19 +63,19 @@
 
             <input type="hidden" class="form-control" id="id" name="id">
             <div class="form-group row">
-                <label class="col-sm-4 col-form-label">Количество:</label>
+                <label class="col-sm-4 col-form-label" id ="many" >Количество:</label>
                 <div class="col-sm-8">
                     <input class="form-control" id="count" name="amount">
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-5 col-form-label">Минимальная цена:</label>
+                <label class="col-sm-5 col-form-label" id ="min" >Минимальная цена:</label>
                 <div class="col-sm-7">
                     <input class="form-control" id="min_cost" name="price_start">
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-5 col-form-label">Максимальная цена:</label>
+                <label class="col-sm-5 col-form-label" id ="max" >Максимальная цена:</label>
                 <div class="col-sm-7">
                     <input class="form-control" id="max_cost" name="price_end">
                 </div>
@@ -47,7 +84,7 @@
 
             <div class="form-group row">
                 <div class="w-100 px-3">
-                    <button type="submit" class="w-100 btn btn-primary">Выставить лот</button>
+                    <button type="submit" id="button" class="w-100 btn btn-primary">Выставить лот</button>
                 </div>
             </div>
         </form>
