#3 кусок коммита нового функционала с подарком для мастера и PoC

--- a/static/login.html
+++ b/static/login.html
@@ -20,8 +20,7 @@
             </label>
         </div>
         <div style="text-align: center;">
-            <button type="submit" class="w-75 btn btn-primary">Войти</button>
+            <button id="button" type="submit" class="w-75 btn btn-primary">Войти</button>
         </div>
-
     </form>
 </div>
